# bedrock-prompts-mcp

./: CHANGELOG.md  GITHUB_SETUP.md  LICENSE  PUSH_TO_GITHUB.txt  QUICK_REFERENCE.md  README.md  bedrock_prompts_mcp_server.py  claude_desktop_config.example.json  examples.py  pyproject.toml  requirements.txt  setup_github.sh
