[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bedrock-prompts-mcp"
version = "0.1.0"
description = "MCP server for AWS Bedrock managed prompts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "mcp>=0.9.0",
]

[project.scripts]
bedrock-prompts-mcp = "bedrock_prompts_mcp_server:main"

[tool.setuptools]
py-modules = ["bedrock_prompts_mcp_server"]
